@@ -1050,30 +1050,28 @@ function ShowScenes()
   $('#scenecontent').i18n();
 
 	if (window.my_config.userrights==2) {
-	  if ($.myglobals.ismobile==false) {
-			$("#scenecontent .span4").draggable({
-					drag: function() {
-						clearInterval($.myglobals.refreshTimer);
-						$.devIdx=$(this).attr("id");
-						$(this).css("z-index", 2);
-					},
-					revert: true
-			});
-			$("#scenecontent .span4").droppable({
-					drop: function() {
-						var myid=$(this).attr("id");
-						$.devIdx.split(' ');
-						$.ajax({
-							 url: "json.htm?type=command&param=switchsceneorder&idx1=" + myid + "&idx2=" + $.devIdx,
-							 async: false, 
-							 dataType: 'json',
-							 success: function(data) {
-									ShowScenes();
-							 }
-						});
-					}
-			});
-		}
+		$("#scenecontent .span4").draggable({
+				drag: function() {
+					clearInterval($.myglobals.refreshTimer);
+					$.devIdx=$(this).attr("id");
+					$(this).css("z-index", 2);
+				},
+				revert: true
+		});
+		$("#scenecontent .span4").droppable({
+				drop: function() {
+					var myid=$(this).attr("id");
+					$.devIdx.split(' ');
+					$.ajax({
+						 url: "json.htm?type=command&param=switchsceneorder&idx1=" + myid + "&idx2=" + $.devIdx,
+						 async: false, 
+						 dataType: 'json',
+						 success: function(data) {
+								ShowScenes();
+						 }
+					});
+				}
+		});
 	}
 	$.myglobals.refreshTimer = setInterval(RefreshScenes, 10000);
   return false;
